--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
                             <div class="custom-text-input hidden" id="otherTreatmentInput">  
                                 <input type="text" name="otherTreatmentText" placeholder="Specify other treatment">
                             </div>
-
+                        </div>
+                            
+                         <div class="custom-radio">
                             <p> RAL </p>
                             <input type="radio" id="otherRal" name="ral" value="Other">
                             <label for="otherRal">Other...</label>
