--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
                             
                          <div class="custom-radio">
                             <p> RAL </p>
+                            <input type="radio" id="standard" name="ral" value="Standard" required>
+                            <label for="standard">Standard</label>
                             <input type="radio" id="otherRal" name="ral" value="Other">
                             <label for="otherRal">Other...</label>
                             <div class="custom-text-input hidden" id="otherRal">  
