--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             
                          <div class="custom-radio">
                             <p> RAL </p>
-                            <input type="radio" id="standard" name="ral" value="Standard" required>
+                            <input type="radio" id="standardRal" name="ral" value="Standard" required>
                             <label for="standard">Standard</label>
                             <input type="radio" id="otherRal" name="ral" value="Other">
                             <label for="otherRal">Other...</label>
