--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
                             </div>
                         </div>
                             
-                         <div class="custom-radio">
+                         <div class="custom-radio"> <!-- RAL -->
                             <p> RAL </p>
                             <input type="radio" id="standardRal" name="ral" value="Standard" required>
-                            <label for="standard">Standard</label>
+                            <label for="standardRal">Standard</label>
                             <input type="radio" id="otherRal" name="ral" value="Other">
                             <label for="otherRal">Other...</label>
                             <div class="custom-text-input hidden" id="otherRal">  
