--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
 #otherTreatmentInput {
     margin-top: 20px; /* Puoi regolare il valore in base alle tue esigenze */
 }
-      
+
+#otherRalInput {
+    margin-top: 20px; /* Puoi regolare il valore in base alle tue esigenze */
+}
+        
     </style>
 
 
