--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                             <p> RAL </p>
                             <input type="radio" id="standardRal" name="ral" value="Standard" required>
                             <label for="standardRal">Standard</label>
-                            <input type="radio" id="otherRal" name="ral" value="OtherRal">
-                            <label for="otherRal">Other...</label>
+                            <input type="radio" id="otherRalRal" name="ral" value="OtherRal">
+                            <label for="otherRalRadio">Other...</label>
                             <div class="custom-text-input hidden" id="otherRal">  
                                 <input type="text" name="otherRalText" placeholder="Specify other Ral">
                             </div>                            
@@ -203,7 +203,7 @@
             document.getElementById('otherTreatmentInput').classList.toggle('hidden', !this.checked);
         });
 
-        document.getElementById('otherRal').addEventListener('change', function() {
+        document.getElementById('otherRalRadio').addEventListener('change', function() {
             document.getElementById('otherRalInput').classList.toggle('hidden', !this.checked);
         });
         
