--- a/index.html
+++ b/index.html
@@ -182,23 +182,23 @@
                         <div class="custom-checkbox">
                             <p>Additional Options</p>
                             <div>
-                                <input type="checkbox" id="option1" name="additionalOptions" value="Option 1">
+                                <input type="checkbox" id="option1" name="additionalOptions" value="Silentblock (Anti-Vibrations Pads)">
                                 <label for="option1">Option 1</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="option2" name="additionalOptions" value="Option 2">
+                                <input type="checkbox" id="option2" name="additionalOptions" value="Each fan with service switch">
                                 <label for="option2">Option 2</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="option3" name="additionalOptions" value="Option 3">
+                                <input type="checkbox" id="option3" name="additionalOptions" value="Wiring + Magnetothermics">
                                 <label for="option3">Option 3</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="option4" name="additionalOptions" value="Option 4">
+                                <input type="checkbox" id="option4" name="additionalOptions" value=" ">
                                 <label for="option4">Option 4</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="option5" name="additionalOptions" value="Option 5">
+                                <input type="checkbox" id="option5" name="additionalOptions" value=" ">
                                 <label for="option5">Option 5</label>
                             </div>
                         </div>
