--- a/index.html
+++ b/index.html
@@ -182,15 +182,15 @@
                         <div class="custom-checkbox">
                             <p>Additional Options</p>
                             <div>
-                                <input type="checkbox" id="option1" name="additionalOptions" value="Silentblock (Anti-Vibrations Pads)">
+                                <input type="checkbox" id="option1" name="additionalOptions" value="Silentblock (Anti-Vibrations Pads)" checked>
                                 <label for="option1">Option 1</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="option2" name="additionalOptions" value="Each fan with service switch">
+                                <input type="checkbox" id="option2" name="additionalOptions" value="Each fan with service switch" checked>
                                 <label for="option2">Option 2</label>
                             </div>
                             <div>
-                                <input type="checkbox" id="option3" name="additionalOptions" value="Wiring + Magnetothermics">
+                                <input type="checkbox" id="option3" name="additionalOptions" value="Wiring + Magnetothermics" checked>
                                 <label for="option3">Option 3</label>
                             </div>
                             <div>
