--- a/index.html
+++ b/index.html
@@ -180,26 +180,28 @@
                             <label for="k65">K65</label>
                         </div>
                         <div class="custom-checkbox">
+
+                            
                             <p>Additional Options</p>
                             <div>
                                 <input type="checkbox" id="option1" name="additionalOptions" value="Silentblock (Anti-Vibrations Pads)" checked>
-                                <label for="option1">Option 1</label>
+                                <label for="option1">Silentblock (Anti-Vibrations Pads)</label>
                             </div>
                             <div>
                                 <input type="checkbox" id="option2" name="additionalOptions" value="Each fan with service switch" checked>
-                                <label for="option2">Option 2</label>
+                                <label for="option2">Each fan with service switch</label>
                             </div>
                             <div>
                                 <input type="checkbox" id="option3" name="additionalOptions" value="Wiring + Magnetothermics" checked>
-                                <label for="option3">Option 3</label>
+                                <label for="option3">Wiring + Magnetothermics</label>
                             </div>
                             <div>
                                 <input type="checkbox" id="option4" name="additionalOptions" value=" ">
-                                <label for="option4">Option 4</label>
+                                <label for="option4"> </label>
                             </div>
                             <div>
                                 <input type="checkbox" id="option5" name="additionalOptions" value=" ">
-                                <label for="option5">Option 5</label>
+                                <label for="option5"> </label>
                             </div>
                         </div>
                     </div>
