--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
                                 <input type="checkbox" id="option3" name="additionalOptions" value="Wiring + Magnetothermics" checked>
                                 <label for="option3">Wiring + Magnetothermics</label>
                             </div>
-                            <div>
-                                <input type="checkbox" id="option4" name="additionalOptions" value=" ">
-                                <label for="option4"> </label>
-                            </div>
-                            <div>
-                                <input type="checkbox" id="option5" name="additionalOptions" value=" ">
-                                <label for="option5"> </label>
-                            </div>
+                        <div>
+                            <input type="checkbox" id="option4" name="additionalOptions" value="option4">
+                            <label for="option4">Custom Option 1 (potrebbe essere utilizzata in futuro)</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="option5" name="additionalOptions" value="option5">
+                            <label for="option5">Custom Option 2 (potrebbe essere utilizzata in futuro)</label>
+                        </div>
                         </div>
                     </div>
                 </div>
