--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                             
                             <p>Additional Options</p>
                             <div>
-                                <input type="checkbox" id="option1" name="additionalOptions" value="Silentblock (Anti-Vibrations Pads)" checked>
+                                <input type="checkbox" id="option1" name="additionalOptions" value="Silentblock (Anti-Vibrations Pads.)" checked>
                                 <label for="option1">Silentblock (Anti-Vibrations Pads)</label>
                             </div>
                             <div>
