--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
                             </div>
                         <div>
                             <input type="checkbox" id="option4" name="additionalOptions" value="option4">
-                            <label for="option4">Custom Option 1 (potrebbe essere utilizzata in futuro)</label>
+                            <label for="option4">Free Option 1 ()</label>
                         </div>
                         <div>
                             <input type="checkbox" id="option5" name="additionalOptions" value="option5">
-                            <label for="option5">Custom Option 2 (potrebbe essere utilizzata in futuro)</label>
+                            <label for="option5">Free Option 2 ()</label>
                         </div>
                         </div>
                     </div>
