--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                             
                             <p>Additional Options</p>
                             <div>
-                                <input type="checkbox" id="option1" name="additionalOptions" value="Silentblock (Anti-Vibrations Pads..)" checked>
-                                <label for="option1">Silentblock (Anti-Vibrations Pads)</label>
+                                <input type="checkbox" id="option1" name="additionalOptions" value="Silentblock (Anti-Vibrations Pads)" checked>
+                                <label for="option1">Silentblock (Anti-Vibrations Pads...)</label>
                             </div>
                             <div>
                                 <input type="checkbox" id="option2" name="additionalOptions" value="Each fan with service switch" checked>
