--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="box">
     <h1>Sito in disuso</h1>
     <p>Questa versione non è più aggiornata.<br>
-       Verrai reindirizzato automaticamente alla nuova versione entro pochi secondi.</p>
+       Verrai reindirizzato automaticamente alla nuova versione entro pochi secondi.Elimina questo sito e salvati quello aggiornato</p>
     <p><a href="https://alessenex.github.io/Gascooler_order_v3/">👉 Vai subito al nuovo sito</a></p>
   </div>
 </body>
